--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -7,7 +7,7 @@
     <style>
       html,
       body,
-      #viewDiv {
+      #map {
         padding: 0;
         margin: 0;
         height: 100%;
