--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -8,10 +8,7 @@
       html,
       body,
       #map {
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
+        height: 600px;
       }
     </style>
     
