--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -2,6 +2,7 @@
    <head>
       <meta charset="utf-8">
       <title> Map 1 </title>
+   </head>
       
    <body>
       <table border="1">
@@ -39,3 +40,4 @@
   <div id="map"></div>
   <script src="script.js"></script>
 </body>
+</html>
