--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -28,11 +28,7 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 
-   var terrorism = new L.GeoJSON.AJAX("terrorism.geojson");       
-geojsonLayer.addTo(map);
-
-   var nl = new L.GeoJSON.AJAX("fr_ntl.geojson");       
-geojsonLayer.addTo(map);
+var jsonTest = new L.GeoJSON.AJAX(["terrorism.geojson","fr_ntl.geojson"],{onEachFeature:popUp}).addTo(map);
       
   <div id="map"></div>
   <script src="script.js"></script>
