--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -15,6 +15,7 @@
       </style>
 
     <script src="/js/leaflet-0.7.2/leaflet.ajax.min.js"></script>
+    <script type="text/javascript" src="../dist/leaflet.ajax.js"></script>
 
    </head>
       
