--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -16,6 +16,7 @@
 
     <script src="/js/leaflet-0.7.2/leaflet.ajax.min.js"></script>
     <script type="text/javascript" src="../dist/leaflet.ajax.js"></script>
+    <script src="https://embed.github.com/view/geojson/calebbuffa/GIS-5091/Project 1/terrorism.geojson"></script>
 
    </head>
       
