--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -15,6 +15,8 @@
 
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
+<script type="text/javascript" src="terrorism.geojson"></script>
+
 <body>
 <div id="map"></div>
 <script src="script.js"></script>
