--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -5,6 +5,10 @@
 name="viewport"
 content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
 
+<link
+rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css"/>
+<script src="https://js.arcgis.com/4.18/"></script>
+
 <link rel='stylesheet' href='style.css'/>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
