--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -9,6 +9,8 @@ content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
 rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css"/>
 <script src="https://js.arcgis.com/4.18/"></script>
 
+<script src="https://cdn.rawgit.com/jquery/jquery-ui/74f8a0ac/external/jquery-2.1.1/jquery.js"></script> 
+
 <link rel='stylesheet' href='style.css'/>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
