--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -1,8 +1,14 @@
 <html>
   <head>
+
+    <title>Map 1</title>
+
+    <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
       #map { 
-  height: 100%; 
+  height: 600px; 
 }
     </style>
     
@@ -14,12 +20,15 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 
+<script src="https://unpkg.com/esri-leaflet@2.5.3/dist/esri-leaflet.js"
+   integrity="sha512-K0Vddb4QdnVOAuPJBHkgrua+/A9Moyv8AQEWi0xndQ+fqbRfAFd47z4A9u1AW/spLO0gEaiE1z98PK1gl5mC5Q=="
+   crossorigin=""></script>
+
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
 <div id="map"></div>
-  </head>
-  
+      </head>
   <body>
     <div id="map"></div>
     <script>
@@ -29,11 +38,6 @@ var Esri_WorldGrayCanvas = L.tileLayer('https://server.arcgisonline.com/ArcGIS/r
 	attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
 	maxZoom: 16
 }).addTo(map);
-
-	    $.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%201/terrorism.geojson",function(data){
-    // add GeoJSON layer to the map once the file is loaded
-    L.geoJson(data).addTo(map);
-  });
 
 var tstyle = {
     "color": "#ff0000",
@@ -86,8 +90,59 @@ $.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%20
             }
                                          );
             road.addTo(map); }); 
+
+var baseMap = {
+    "WorldGrayCanvas": Esri_WorldGrayCanvas,
+};
+
+var overlayMaps = {
+    "Terrorism": terrorism,
+    "Roads": road,
+    "Nighttime Lights": nlight
+};
+
+var baseMaps = {
+    "<span style='color: gray'>Grayscale</span>": grayscale,
+    "Streets": streets
+};
+
+L.control.layers(baseMaps, overlayMaps).addTo(map);
+
+var markersLayer = new L.LayerGroup();
+map.addControl( new L.Control.ListMarkers({layer: markersLayer}) );
+
+var popup = L.popup();
+
+function onMapClick(e) {
+    popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
+}
+
+map.on('click', onMapClick);
+
+var legend = L.control({position: 'bottomright'});
+    legend.onAdd = function (map) {
+
+    var div = L.DomUtil.create('div', 'info legend');
+    labels = ['<strong>Categories</strong>'],
+    categories = ['Major Roadways','Nighttime Lights','Terrorist Attacks'];
+
+    for (var i = 0; i < categories.length; i++) {
+
+            div.innerHTML += 
+            labels.push(
+                '<i class="circle" style="background:' + getColor(categories[i]) + '"></i> ' +
+            (categories[i] ? categories[i] : '+'));
+
+        }
+        div.innerHTML = labels.join('<br>');
+    return div;
+    };
+    legend.addTo(map);
+
     </script>
-    
   </body>
 </html>
   
