--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -15,5 +15,8 @@
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
-<div id="map"></div>
+<body>
+  <div id="map"></div>
+  <script src="script.js"></script>
+</body>
   
