--- a/Project 1/Map 2/index.html
+++ b/Project 1/Map 2/index.html
@@ -14,21 +14,9 @@
 
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src="script.js"></script>
 
 <body>
-  
-  <div id="map"></div>
   <script src="script.js"></script>
-   
-   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-   crossorigin=""></script>
-
-<script src="https://unpkg.com/esri-leaflet@2.5.3/dist/esri-leaflet.js"
-   integrity="sha512-K0Vddb4QdnVOAuPJBHkgrua+/A9Moyv8AQEWi0xndQ+fqbRfAFd47z4A9u1AW/spLO0gEaiE1z98PK1gl5mC5Q=="
-   crossorigin=""></script>
-
-<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-  
+  <div id="map"></div>
 </body>
