--- a/Project 1/Map 2/index.html
+++ b/Project 1/Map 2/index.html
@@ -14,7 +14,7 @@
 
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="script.js"></script>
+<script src="/js/leaflet-0.7.2/leaflet.ajax.min.js"></script>
 
 <body>
   <script src="script.js"></script>
