--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -12,8 +12,8 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 
-<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
+<script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
 <div id="map"></div>
   </head>
