--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -32,8 +32,8 @@ var Esri_WorldGrayCanvas = L.tileLayer('https://server.arcgisonline.com/ArcGIS/r
 	maxZoom: 16
 }).addTo(map);
 
-var nlight = newL.GeoJSON.AJAX("fr_night_light.geojson");
-nlight.addTo(map;
+var nlight = new L.GeoJSON.AJAX("fr_night_light.geojson");
+nlight.addTo(map);
 
     </script>
     
