--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -47,7 +47,7 @@
 
 <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="terrorism.js"></script>
+<script src="https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%201/terrorism.geojson"></script>
 
 <div id="map"></div>
   </head>
