--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -71,7 +71,7 @@ var tstyle = {
 
 
 
-$.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%201/terrorism.geojson", function(response) {
+$.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%201/euro_terrorism.geojson", function(response) {
             console.log("response", response);
             var terrorism = new L.GeoJSON(response, {
               pointToLayer: function (feature, latlng) {
@@ -94,7 +94,7 @@ var nstyle = {
     fillOpacity: .1
 };
 
-$.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%201/fr_night_light.geojson", function(response) {
+$.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%201/euro_night_light.geojson", function(response) {
             console.log("response", response);
             var nlight = new L.GeoJSON(response, {
               style: nstyle
