--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -54,7 +54,7 @@
   <body>
     <div id="map"></div>
     <script>
-var map = L.map('map').setView([52.52, 13.4050], 4.5);
+var map = L.map('map').setView([48.1351, 11.5820], 4.5);
 
 var Esri_WorldGrayCanvas = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
 	attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
@@ -63,8 +63,8 @@ var Esri_WorldGrayCanvas = L.tileLayer('https://server.arcgisonline.com/ArcGIS/r
 
 var tstyle = {
     "color": "#ff0000",
-  "radius": 1,
-    "weight": 1,
+  "radius": 1.5,
+    "weight": .8,
     "opacity": 1,
   "fillOpacity": 1
 };
