--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -87,7 +87,7 @@ terrorism.bringToFront();
 
 var nstyle = {
     radius: 1,
-    fillColor: "#4dff00",
+    fillColor: "#02cf68",
     color: "#4dff00",
     weight: 1,
     opacity: 1,
