--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -88,7 +88,7 @@ terrorism.bringToFront();
 var nstyle = {
     radius: 1,
     fillColor: "#02cf68",
-    color: "#4dff00",
+    color: "#02cf68",
     weight: 1,
     opacity: 1,
     fillOpacity: .1
