--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+	  <title>European Terrorism and Nighttime Lights</title>
     <style>
       #map { position: absolute; top:0; bottom:0; right:0; left:0; }
       
