--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -7,15 +7,15 @@
 .legend {
   padding: 6px 8px;
   font: 14px Arial, Helvetica, sans-serif;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   line-height: 24px;
-  color: #FFFFFF;
+  color: #000000;
 }
 .legend h4 {
   text-align: center;
   font-size: 16px;
   margin: 2px 12px 8px;
-  color: #FFFFFF;
+  color: #000000;
 }
 
 .legend span {
@@ -33,7 +33,7 @@
 
 .legend i.icon {
   background-size: 18px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(0, 0, 0, 1);
 }
       
     </style>
@@ -79,7 +79,7 @@ $.getJSON("https://raw.githubusercontent.com/calebbuffa/GIS-5091/main/Project%20
               pointToLayer: function (feature, latlng) {
                 return L.circleMarker(latlng, tstyle);
               }, onEachFeature: function (f, l) {
-   l.bindPopup(JSON.stringify(f.properties,null,' ').replace(/[\{\}"]/g,''));
+   l.bindPopup('<h3>Media Source: '+f.properties.scite1+'</h3>');
  }
             }
                                          );
@@ -122,7 +122,10 @@ legend.onAdd = function(map) {
   div.innerHTML += "<h4>Legend</h4>";
   div.innerHTML += '<i style="background: #ff0000"></i><span>Terrorist Attack</span><br>';
   div.innerHTML += '<i style="background: #4dff00"></i><span>Nighttime Lights</span><br>';
+//   div.innerHTML += '<i class="icon" style="background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAElBMVEX///8AAADc3NzV1dX39/fZ2dlQS2zLAAAAfklEQVR4nO3awRGAIADAMBXYf2Un4KtXLtmg/14XAAAAAAAAAAAAAAAAAAAAAAAAAAD/m+s5w5qbwnGfYijMU9insE9hn8I+hX0K+xT2KexT2KewT2Gfwj6FfQr7FPYp7FPYtys8/8UAAAAAAAAAAAAAAAAAAAAAAAAAAOBLL6dOISwyj2o4AAAAAElFTkSuQmCC);"></i><span>Major Roadway</span><br>';
   
+  
+
   return div;
 };
 
