--- a/Project 1/Map 3/index.html
+++ b/Project 1/Map 3/index.html
@@ -27,13 +27,13 @@
 
 var scene = new WebScene({
         portalItem:{
-         id:"63c7acfda531439395f868309d8f5233#" 
+         id:"63c7acfda531439395f868309d8f5233" 
         }
       });
       var view = new SceneView({
         container: "viewDiv",
         map: scene,
-		viewingMode:'local'
+		viewingMode:'global'
       });
 
     });
