--- a/Project 1/Map 2/index.html
+++ b/Project 1/Map 2/index.html
@@ -53,6 +53,11 @@
 
           // Add widget to the bottom right corner of the view
           view.ui.add(legend, "top-right");
+          
+          t.featureReduction = {
+  type: "cluster",
+  clusterRadius: "75px"
+};
         });
         
       });
