--- a/Project 1/Map 1/index.html
+++ b/Project 1/Map 1/index.html
@@ -121,7 +121,7 @@ legend.onAdd = function(map) {
   var div = L.DomUtil.create("div", "legend");
   div.innerHTML += "<h4>Legend</h4>";
   div.innerHTML += '<i style="background: #ff0000"></i><span>Terrorist Attack</span><br>';
-  div.innerHTML += '<i style="background: #4dff00"></i><span>Nighttime Lights</span><br>';
+  div.innerHTML += '<i style="background: #4dff00"></i><span>Top 50% Nighttime Lights DN Values</span><br>';
 //   div.innerHTML += '<i class="icon" style="background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAElBMVEX///8AAADc3NzV1dX39/fZ2dlQS2zLAAAAfklEQVR4nO3awRGAIADAMBXYf2Un4KtXLtmg/14XAAAAAAAAAAAAAAAAAAAAAAAAAAD/m+s5w5qbwnGfYijMU9insE9hn8I+hX0K+xT2KexT2KewT2Gfwj6FfQr7FPYp7FPYtys8/8UAAAAAAAAAAAAAAAAAAAAAAAAAAOBLL6dOISwyj2o4AAAAAElFTkSuQmCC);"></i><span>Major Roadway</span><br>';
   
   
